# ai-second-brain

./: .gitignore  README.md
.cursor/plans/: ai_second_brain_(tauri+fastapi)_45311dd7.plan.md
.trae/documents/: ui_migration_plan.md
.trae/specs/ui_migration_plan/: checklist.md  spec.md  tasks.md
apps/backend/: check_chroma.py  check_db.py  mock_server.py  recover_from_chroma.py  requirements.txt  test_chroma_only.py  test_vector_repo.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: __init__.py  ai.py  chat.py  journal.py  reflection.py  (+1 more)
apps/backend/app/core/: settings.py
apps/backend/app/db/: session.py
apps/backend/app/domain/: models.py  schemas.py
apps/backend/app/llm/: ollama_client.py  prompts.py
apps/backend/app/services/: ai_service.py  chat_service.py  conversation_service.py  embedding_service.py  journal_service.py  reflection_service.py  retrieval_service.py
apps/backend/app/vector/: chroma_client.py  vector_repo.py
apps/backend/app/workers/: embed_worker.py
apps/backend/scripts/: rebuild_embeddings.py
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ChatView.tsx  JournalView.tsx  SearchView.tsx  Sidebar.tsx  SummaryView.tsx
apps/desktop/src/pages/: App.tsx
apps/desktop/src/styles/: index.css
frontend_ui_reference/: README.md  metadata.json
frontend_ui_reference/src/: App.tsx  index.css
(+3 files in other folders)
