[package]
name = "ai-second-brain"
version = "0.1.0"
description = "AI Second Brain desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

